# nixpak-flatpak-wrapper

./: Cargo.toml  README.md  config_schema.nix  flake.nix  module.nix  pkg.nix
src/: main.rs
