[package]
name = "nixpak-flatpak-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "flatpak"
# path = "src/main.rs"

[dependencies]
chrono = "0.4.35"
dirs = "5.0.1"
fern = "0.6.2"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
snafu = "0.8.2"
strum = "0.26.2"
strum_macros = "0.26.2"
toml = "0.8.12"
which = "6.0.1"
